Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26647

[REG 5->6] Broken Android keystore creation and usage

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 6.0.1
    • Qt Creator 6.0.0
    • None
    • Windows 11 Pro for Workstations 10.0.22000.348
      Eclipse Temurin JDK with Hotspot 11.0.13+8
      Visual Studio 2022 (17.0.2)
    • Windows
    • 16c8f1a9b6f7658225c1c3f2a4ae6cecd97a5dfa (qt-creator/qt-creator/6.0)

      Errors returned when:

      • trying to create a new keystore
      • opening an existing keystore (says "incorrect password")

      Even tried to install Eclipse Temurin SDK (ex Adopt Open SDK) to a path without spaces, nothing changes.

      Worked without issues on QtCreator 5.0.3

        1. Screenshot 2021-12-02 152146.png
          45 kB
          Claudio Barutta
        2. Screenshot 2021-12-02 152232.png
          6 kB
          Claudio Barutta
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            jubba Claudio Barutta
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes