Android: Fix use of keytool on Windows

Fixes: QTCREATORBUG-26647
Change-Id: I34fd2b4304480186d1a05e2c9101b2cfbd1e8e47
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>